se realiza resonsive de la pagina completa
falta detalle de inmueble detalle de proyecto y contacto

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,6 +34,7 @@
         "scss/_zcontacto.scss",
         "scss/_zblog.scss",
         "scss/_zproyectos.scss",
+        "scss/_breakpoints.scss",
         "scss/_functions.scss",
         "scss/_variables.scss",
         "scss/_mixins.scss",
