--- a/prepros-6.config
+++ b/prepros-6.config
@@ -482,7 +482,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
