Cambios importantes y ajustes del cliente
se realizan cambios significativos en index y quienes somos igual que en los envios de los focrmularios

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vendor2/daniel",
+    "name": "vendor/daniel",
     "authors": [
         {
             "name": "william solano",
@@ -7,6 +7,6 @@
         }
     ],
     "require": {
-        "jasongrimes/paginator": "~1.0"
+        "phpmailer/phpmailer": "^6.1"
     }
 }
